# differ

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  start.sh  tox.ini
src/differ/: app.py  mcp_server.py
src/differ/static/: app.js  style.css
src/differ/templates/: index.html  repos.html
